idk wat im doin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
     Submit link
   </button>
 </form>
+
 <div class="ui grid posts">
-  <app-article></app-article>
+  <app-article *ngFor="let article of sortedArticles()" [article]="article"></app-article>
 </div>
